Fix overflowing in infobox h1

--- a/scss/editor/callouts/_callout-fas-infobox.scss
+++ b/scss/editor/callouts/_callout-fas-infobox.scss
@@ -159,6 +159,7 @@ body {
         z-index: 1;
         position: relative;
         background: color-mix(in srgb, rgb(var(--callout-color)), rgb(var(--mono-rgb-0)) 20%);
+        overflow: visible;
     }
 
     h1:first-child {
